feat: Change to filter by substrings